config/temp/main/default/objects/Patient__c/Patient__c.object-meta.xml
<CustomObject>
    <description>List of patients that samples have been drawn for and set to our lab</description>
    <label>Patient</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>