config/temp/main/default/objects/Patient__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Patient&apos;s Date of Birth</description>
    <label>DOB</label>
    <required>true</required>
    <type>Date</type>
</CustomField>