config/temp/main/default/objects/Patient__c/fields/Hospital_del__c.field-meta.xml
<CustomField>
    <fullName>Hospital_del__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Patient&apos;s hospital/clinic</description>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients_del</relationshipName>
    <type>Lookup</type>
</CustomField>