config/temp/main/default/objects/Patient__c/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <label>MRN</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>