config/temp/main/default/objects/Patient__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Patient&apos;s Provider</description>
    <label>Provider</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>