config/temp/main/default/objects/Patient__c/fields/Sample_Location__c.field-meta.xml
<CustomField>
    <fullName>Sample_Location__c</fullName>
    <description>Location of sample</description>
    <label>Sample Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>