config/temp/main/default/objects/Patient__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>Patient&apos;s Social Security Number</description>
    <label>Social Security Number</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>