config/temp/main/default/objects/Patient__c/recordTypes/Inactive.recordType-meta.xml
<RecordType>
    <fullName>Inactive</fullName>
    <active>true</active>
    <label>Inactive</label>
</RecordType>