config/temp/main/default/objects/Patient__c/listViews/MRN_List.listView-meta.xml
<ListView>
    <fullName>MRN_List</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Hospital_del__c</field>
        <operation>equals</operation>
        <value>IHC,John Hopkins</value>
    </filters>
    <label>MRN List</label>
</ListView>