config/temp/main/default/objects/Patient__c/listViews/Patient_Activity.listView-meta.xml
<ListView>
    <fullName>Patient_Activity</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Patient__c.Active</value>
    </filters>
    <label>Patient Activity</label>
    <sharedTo>
        <role>CustomerSupportNorthAmerica</role>
        <role>SVPCustomerServiceSupport</role>
    </sharedTo>
</ListView>